--- a/src/main/resources/templates/main-page-listing.html
+++ b/src/main/resources/templates/main-page-listing.html
@@ -11,14 +11,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
-    <script defer src="../static/scripts/common.js"></script>
-    <link rel="stylesheet" href="../static/styles/main.css">
+    <script defer src="../static/scripts/common.js" th:src="@{/scripts/common.js}"></script>
+    <link rel="stylesheet" href="../static/styles/main.css" th:href="@{/styles/main.css}">
 </head>
 <body>
 <div class="container">
     <ul class="menu">
         <li class="menu-logo-container">
-            <a href="#">
+            <a href="#" th:href="@{/}">
                 <i class="fa-solid fa-cat"></i> Fantasy Premier League
             </a>
         </li>
@@ -48,64 +48,64 @@
         </p>
     </header>
     <main class="main-content">
-        <h2 class="list-heading">Promowane filmy / Nazwa Kategorii</h2>
-        <p class="list-description">Opis sekcji, przykładowo opis kategorii, albo strony głównej</p>
-        <ul class="movie-list">
-            <li class="movie-list-item">
-                <a href="#">
-                    <img src="../static/img/poster-placeholder.png"
-                         alt="tytuł filmu"
-                         class="movie-list-item-poster">
+        <h2 class="list-heading" th:text="${heading}">Nazwa kategorii</h2>
+        <p class="list-description" th:text="${description}">Opis sekcji, przykładowo opis kategorii, albo strony głównej</p>
+        <ul class="article-list" th:remove="all-but-first">
+            <li class="article-list-item" th:each="article: ${articles}">
+                <a href="#" th:href="@{|/news/${article.id}|}">
+                    <img src="../static/img/poster-placeholder.jpg"
+                         alt="tytuł artykyłu"
+                         class="article-list-item-poster">
                 </a>
-                <div class="movie-list-item-card">
-                    <div class="movie-list-item-content">
-                        <h3 class="movie-list-item-title">
-                            <a href="#">Guardiola: "Wygraliśmy ligę dzięki wsparciu społeczności FPL w Polsce.</a>
+                <div class="article-list-item-card">
+                    <div class="article-list-item-content">
+                        <h3 class="article-list-item-title">
+                            <a href="#" th:href="@{|news/${article.id}|}" th:text="${article.title}">Guardiola: "Wygraliśmy ligę dzięki wsparciu społeczności FPL w Polsce.</a>
                         </h3>
-                        <h4>Pop Guargiola uważa, że zwycięstwo w lidze Manchestoerowi City zapewniło wsparcie z Polski.</h4>
-                        <p>D.Kumor</p>
+                        <h4 th:text="${article.content}">Pop Guargiola uważa, że zwycięstwo w lidze Manchestoerowi City zapewniło wsparcie z Polski.</h4>
+                        <p th:text="${article.author}">D.Kumor</p>
                     </div>
-                    <div class="movie-list-item-rating">
+                    <div class="article-list-item-rating">
                         <i class="fa-solid fa-heart"></i>
                         <span>431</span>
                     </div>
                 </div>
             </li>
-            <li class="movie-list-item">
+            <li class="article-list-item">
                 <a href="#">
                     <img src="../static/img/poster-placeholder.png"
                          alt="tytuł filmu"
-                         class="movie-list-item-poster">
+                         class="article-list-item-poster">
                 </a>
-                <div class="movie-list-item-card">
-                    <div class="movie-list-item-content">
-                        <h3 class="movie-list-item-title">
+                <div class="article-list-item-card">
+                    <div class="article-list-item-content">
+                        <h3 class="article-list-item-title">
                             <a href="#">Dynamiczna Drużyna 'Strikers United' - Kandydaci do Korony Premier League</a>
                         </h3>
                         <h4>Strikers United, jeden z najbardziej utalentowanych zespołów w Premier League, jest obecnie na ustach wszystkich miłośników piłki nożnej. Zespół zyskał reputację dzięki swojemu ekscytującemu i dynamicznemu stylowi gry, który przyciąga tłumy na stadiony. Od czasu do czasu wprowadza innowacyjne taktyki, które zaskakują przeciwników i przynoszą spektakularne wyniki. Zespół zebrał wokół siebie grupę utalentowanych i ambitnych zawodników, którzy dążą do zdobycia korony Premier League. W tym artykule przyjrzymy się bliżej Strikers United, ich drodze do sukcesu oraz najważniejszym postaciom, które tworzą ten niezwykły zespół..</h4>
                         <p>D.Kumor</p>
                     </div>
-                    <div class="movie-list-item-rating">
+                    <div class="article-list-item-rating">
                         <i class="fa-solid fa-heart"></i>
                         <span>112</span>
                     </div>
                 </div>
             </li>
-            <li class="movie-list-item">
+            <li class="article-list-item">
                 <a href="#">
                     <img src="../static/img/poster-placeholder.png"
                          alt="tytuł filmu"
-                         class="movie-list-item-poster">
+                         class="article-list-item-poster">
                 </a>
-                <div class="movie-list-item-card">
-                    <div class="movie-list-item-content">
-                        <h3 class="movie-list-item-title">
+                <div class="article-list-item-card">
+                    <div class="article-list-item-content">
+                        <h3 class="article-list-item-title">
                             <a href="#">Wzloty i upadki: Historia Chelsea - Drużyna Premier League, która nie przestaje zaskakiwać.</a>
                         </h3>
                         <h4>Chelsea, drużyna Premier League, która wywołuje skrajne emocje wśród kibiców, to zespół pełen nieprzewidywalności i niesamowitych zwrotów akcji. Ich historia pełna jest zarówno triumfów, jak i trudności, co sprawia, że są jednym z najbardziej fascynujących zespołów w angielskiej lidze. Od niesamowitych zwycięstw nad wielkimi rywalami do nieoczekiwanych porażek z nieznanymi drużynami, Blue Lions są zawsze gotowi zaskoczyć swoich przeciwników. W tym artykule przyjrzymy się bliżej historii Blue Lions, ich kluczowym momentom, wpływowym trenerom i niezastąpionym gwiazdom, które zapewniają drużynie jej niezwykłe miejsce w światowej piłce nożnej.</h4>
                         <p>A.Kiloski</p>
                     </div>
-                    <div class="movie-list-item-rating">
+                    <div class="article-list-item-rating">
                         <i class="fa-solid fa-heart"></i>
                         <span>3208</span>
                     </div>
