--- a/src/main/resources/static/styles/main.css
+++ b/src/main/resources/static/styles/main.css
@@ -4,15 +4,18 @@
     padding: 0;
     color: rgb(255, 255, 255);
 }
+
 /*Zmiana domyślnego fontu*/
 body {
     font-family: 'Roboto', sans-serif;
 }
+
 /*Ustawienie koloru odnośników i usunięcie podkreśleń*/
 a {
     text-decoration: none;
     color: #00ff99;
 }
+
 /*Kolor tła w głównym kontenerze i ustawienie elastycznego rozkładu
 Elementy będą ustawiane jeden pod drugim
 */
@@ -22,6 +25,7 @@ Elementy będą ustawiane jeden pod drugim
     min-height: 100vh;
     background-color: #292929;
 }
+
 /*Główna sekcja powinna być skalowana wraz z rozciąganiem okna przeglądarki
 i powinna zajmować większość dostępnej przestrzeni
 */
@@ -35,12 +39,14 @@ i powinna zajmować większość dostępnej przestrzeni
 #toggle-icon {
     color: #00ff8c;
 }
+
 /*Ustawienia dla responsywnego menu*/
 .menu {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 }
+
 /*Elementy menu domyślnie są ukryte*/
 .menu-item {
     width: 100%;
@@ -49,10 +55,12 @@ i powinna zajmować większość dostępnej przestrzeni
     text-align: center;
     display: none;
 }
+
 /*Po wciśnięciu przycisku elementy będą widoczne*/
 .expanded > .menu-item {
     display: block;
 }
+
 /*padding dla elementów menu*/
 .menu-logo-container,
 .menu-toggle {
@@ -60,6 +68,7 @@ i powinna zajmować większość dostępnej przestrzeni
     padding: 16px 32px;
     font-size: 20px;
 }
+
 /*MENU END*/
 
 /*FOOTER START*/
@@ -68,6 +77,7 @@ i powinna zajmować większość dostępnej przestrzeni
     padding: 8px;
     text-align: center;
 }
+
 /*FOOTER END*/
 
 /*Responsive*/
@@ -106,15 +116,17 @@ i powinna zajmować większość dostępnej przestrzeni
         min-height: 160px; /* Set a minimum height for the element */
         align-items: center; /* Center the content vertically */
     }
+
     .main-background-header {
         font-size: 3rem;
         margin: 1rem 0;
     }
+
     .main-background-description {
         font-size: 1.2rem;
     }
-    /*main-background END*/
 
+    /*main-background END*/
     /*Listing START*/
     /*Nagłówek*/
     .list-heading,
@@ -122,10 +134,12 @@ i powinna zajmować większość dostępnej przestrzeni
         text-align: center;
         margin: 16px 0;
     }
+
     /*Usunięcie dekoracji elementów listy (kropki na początku)*/
     .article-list {
         list-style-type: none;
     }
+
     /*Margines i ramka wokół pojedynczego artykułu*/
     .article-list-item {
         margin-bottom: 16px;
@@ -133,11 +147,13 @@ i powinna zajmować większość dostępnej przestrzeni
         border: 1px #6d6d6d solid;
         max-height: 600px;
     }
+
     /*Plakat - usuniecie paddingu*/
     .article-list-item-poster {
         display: block;
         max-width: 200px;
     }
+
     /*Karta artykułu*/
     .article-list-item-card {
         display: flex;
@@ -145,14 +161,166 @@ i powinna zajmować większość dostępnej przestrzeni
         justify-content: space-between;
         padding: 16px;
     }
+
     .article-list-item-content > * {
         margin: 8px 0;
     }
+
     .article-list-item-title {
         font-size: 1.6rem;
     }
+
     .article-list-item-rating {
         font-size: 1.6rem;
     }
+    .article-intro {
+        font-weight: bold;
+    }
+
     /*Listing END*/
 }
+
+/*single-news-page.html*/
+/*Informacje jednym rzędzie z odstępem od jumbotrona*/
+.jumbotron {
+    color: #9e9e9e;
+    margin-bottom: 16px;
+    flex: 1;
+    align-self: center;
+    width: 960px;
+}
+
+.article-summary {
+    margin-top: 16px;
+}
+
+/*Mniejsza okładka na małych ekranach*/
+.article-summary-cover {
+    width: 100%;
+    max-height: 400px;
+    min-height: 300px;
+    object-fit: cover;
+}
+
+/*Odstęp informacji o artykule od okładki*/
+.article-summary-info {
+    margin-left: 6px;
+}
+
+/*Oryginalny tytuł w kolorze szarym i odstęp pod nim*/
+.article-summary-original-title {
+    color: #9e9e9e;
+    margin-bottom: 16px;
+}
+
+/*Odstępy między poszczególnymi informacjami*/
+.article-summary-item {
+    margin: 8px 0;
+    color: rgb(150, 150, 150);
+}
+
+/*Większy tytuł*/
+.article-summary-title {
+    font-size: 2rem;
+}
+
+/*Wyśrodkowanie głosowania*/
+.article-rating-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    min-width: 200px;
+}
+
+/*Wyśrodkowanie tekstu Twoja ocena*/
+.article-rating-form > p {
+    text-align: center;
+    margin-bottom: 16px;
+}
+
+/*Powiększenie i wyśrodkowanie średniej oceny*/
+.article-rating-value {
+    font-size: 4rem;
+    text-align: center;
+}
+
+/*Styl dla przycisków z ocenami*/
+.article-rating-button {
+    background-color: #ffc107;
+    border: 0;
+    padding: 4px;
+    font-size: 1.6rem;
+    border-radius: 4px;
+    opacity: 0.8;
+}
+
+/*Usunięcie przezroczystości po najechaniu na przycisk*/
+.article-rating-button:hover {
+    opacity: 1;
+}
+
+/*Odstępy między elementami w ramce z głosowaniem*/
+.article-rating-container > * {
+    margin: 8px 0;
+}
+
+/*Ramka dla boxu z głosowaniem*/
+.article-section {
+    margin-top: 16px;
+    padding: 16px;
+    border: 1px #6d6d6d solid;
+}
+
+.comments {
+    margin-top: 16px;
+    padding: 16px;
+    border: 1px #6d6d6d solid;
+}
+
+.comment {
+    margin-top: 16px;
+    padding: 16px;
+    border: 1px #6d6d6d solid;
+}
+
+.comment-content {
+    font-style: italic;
+}
+
+.commen-author {
+    color: rgb(150, 150, 150);
+}
+
+.comment-icons {
+    position: relative;
+    top: 0;
+    right: 0;
+
+    justify-content: flex-end;
+    align-items: center;
+    height: 100%;
+
+}
+
+.fa-circle-plus, fa-circle-minus, fa-heart {
+    margin-top: 10px;
+    margin-left: 10px;
+}
+.fa-solid:hover{
+    transform: scale(1.5);
+}
+
+.fa-circle-plus:hover {
+    color: #00ff99;
+}
+
+.fa-circle-minus:hover {
+    color: #ff144b;
+}
+.comment-rating {
+    margin: 3px;
+}
+
+
+/*Movie.html END*/
