--- a/src/main/resources/templates/main-page-listing.html
+++ b/src/main/resources/templates/main-page-listing.html
@@ -1,53 +1,12 @@
 <!DOCTYPE html>
-<html lang="pl">
-<head>
-    <meta charset="UTF-8">
-    <title>FPL News</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-          integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-          crossorigin="anonymous"
-          referrerpolicy="no-referrer" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
-    <script defer src="../static/scripts/common.js" th:src="@{/scripts/common.js}"></script>
-    <link rel="stylesheet" href="../static/styles/main.css" th:href="@{/styles/main.css}">
-</head>
+<html lang="pl"
+      xmlns:th="https://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout}">
 <body>
 <div class="container">
-    <ul class="menu">
-        <li class="menu-logo-container">
-            <a href="#" th:href="@{/}">
-                <i class="fa-solid fa-cat"></i> Fantasy Premier League
-            </a>
-        </li>
-        <li class="menu-toggle">
-            <a href="#"><i id="toggle-icon" class="far fa-plus-square"></i></a>
-        </li>
-        <li class="menu-item">
-            <a href="#">News</a>
-        </li>
-        <li class="menu-item">
-            <a href="#">Twitter</a>
-        </li>
-        <li class="menu-item">
-            <a href="#">Memes</a>
-        </li>
-        <li class="menu-item">
-            <a href="#">Players</a>
-        </li>
-        <li class="menu-item">
-            <a href="#">Ranks</a>
-        </li>
-    </ul>
-    <header class="main-background">
-        <h1 class="main-background-header">FPL News PL</h1>
-        <p class="main-background-description">
-            Najświeższe newsy, przewidywany składy, podsumowania kolejki.
-        </p>
-    </header>
-    <main class="main-content">
+
+    <main class="main-content" layout:fragment="content">
         <h2 class="list-heading" th:text="${heading}">Nazwa kategorii</h2>
         <p class="list-description" th:text="${description}">Opis sekcji, przykładowo opis kategorii, albo strony głównej</p>
         <ul class="article-list" th:remove="all-but-first">
@@ -62,7 +21,7 @@
                         <h3 class="article-list-item-title">
                             <a href="#" th:href="@{|news/${article.id}|}" th:text="${article.title}">Guardiola: "Wygraliśmy ligę dzięki wsparciu społeczności FPL w Polsce.</a>
                         </h3>
-                        <h4 th:text="${article.content}">Pop Guargiola uważa, że zwycięstwo w lidze Manchestoerowi City zapewniło wsparcie z Polski.</h4>
+                        <h4 th:text="${article.introduction}">Pop Guargiola uważa, że zwycięstwo w lidze Manchestoerowi City zapewniło wsparcie z Polski.</h4>
                         <p th:text="${article.author}">D.Kumor</p>
                     </div>
                     <div class="article-list-item-rating">
@@ -113,9 +72,6 @@
             </li>
         </ul>
     </main>
-    <footer class="footer">
-        <p>Fantasy Premier League News PL 2023 <i class="fas fa-copyright"></i> Sturnus-DEV.pl</p>
-    </footer>
 </div>
 </body>
 </html>
