--- a/src/main/resources/templates/single-news-page.html
+++ b/src/main/resources/templates/single-news-page.html
@@ -1,93 +1,80 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="pl"
+      xmlns:th="https://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout}">
 <head>
-    <meta charset="UTF-8">
-    <title>Tytuł filmu - MovieClub</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-          integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-          crossorigin="anonymous"
-          referrerpolicy="no-referrer" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
-    <script defer src="../static/scripts/common.js"></script>
-    <link rel="stylesheet" href="../static/styles/main.css">
+    <title>FPL News</title>
 </head>
 <body>
 <div class="container">
-    <ul class="menu">
-        <li class="menu-logo-container">
-            <a href="#" th:href="@{/}">
-                <i class="fas fa-film logo"></i> MovieClub
-            </a>
-        </li>
-        <li class="menu-toggle">
-            <a href="#"><i id="toggle-icon" class="far fa-plus-square"></i></a>
-        </li>
-        <li class="menu-item">
-            <a href="#">Gatunki</a>
-        </li>
-        <li class="menu-item">
-            <a href="#">Top10</a>
-        </li>
-        <li class="menu-item">
-            <a href="#">Zaloguj się</a>
-        </li>
-    </ul>
-    <header class="jumbotron">
-        <h1 class="jumbotron-header">Movie Club</h1>
-        <p class="jumbotron-description">
-            Witaj w najlepszej bazie filmów w sieci. Oceniaj i dyskutuj o najnowszych produkcjach i klasykach kina.
-        </p>
-    </header>
-    <main class="main-content">
-        <section class="movie">
-            <!-- Podsumowanie -->
-            <div class="movie-summary">
+    <main class="main-content" layout:fragment="content">
+        <section class="article">
+            <!-- Wstęp -->
+            <h1 class="article-summary-title">Makelele ma dość Fergusona</h1>
+            <div class="article-summary">
                 <!-- Plakat -->
                 <img src="../static/img/poster-placeholder.png"
-                     alt="tytuł filmu"
-                     class="movie-summary-cover"
+                     alt="tytuł artykułu"
+                     class="article-summary-cover"
                 />
-                <!-- informacje o filmie -->
-                <div class="movie-summary-info">
-                    <h1 class="movie-summary-title">Władca pierścieni</h1>
-                    <p class="movie-summary-original-title">Lord of the rings</p>
-                    <p class="movie-summary-item">Rok: 2001</p>
-                    <p class="movie-summary-item">Gatunek: <a href="#">Fantasy</a> </p>
-                    <p class="movie-summary-item" >
-                        Podróż odważnego hobbita i jego towarzyszy w poszukiwaniu pierścienia.
+                <!-- informacje o artykule -->
+                <div class="article-summary-info">
+                    <div>
+                        <p><i class="fa-solid fa-heart"></i> 134</p>
+                    </div>
+                    <p class="article-summary-item">Data: 01.03.2001</p>
+                    <p class="article-summary-item">Autor: <a href="#">John Doe</a></p>
+                </div>
+                <!-- treść artykułu -->
+                <div class="article-content">
+                    <p>Strikers United, jeden z najbardziej utalentowanych zespołów w Premier League, jest obecnie na ustach wszystkich miłośników piłki nożnej. Zespół zyskał reputację dzięki swojemu ekscytującemu i dynamicznemu stylowi gry, który przyciąga tłumy na stadiony. Od czasu do czasu wprowadza innowacyjne taktyki, które zaskakują przeciwników i przynoszą spektakularne wyniki. Zespół zebrał wokół siebie grupę utalentowanych i ambitnych zawodników, którzy dążą do zdobycia korony Premier League. W tym artykule przyjrzymy się bliżej Strikers United, ich drodze do sukcesu oraz najważniejszym postaciom, które tworzą ten niezwykły zespół..</h4>
                     </p>
                 </div>
             </div>
             <!-- Ocena -->
-            <div class="movie-rating-container movie-section">
-                <h2 class="movie-section-heading">Ocena</h2>
-                <div>
-                    <p class="movie-rating-value" th:text="${avgRating}">4.0</p>
-                    <p>Liczba ocen: 134</p>
-                </div>
-                <form action="#" class="movie-rating-form">
-                    <!-- Identyfikator filmu, na który głosujemy-->
-                    <p>Twoja ocena</p>
-                    <input type="hidden" name="movieId">
-                    <div class="movie-rating-buttons">
-                        <button class="movie-rating-button"><i class="fa-solid fa-star"></i></button>
-                        <button class="movie-rating-button"><i class="fa-solid fa-star"></i></button>
-                        <button class="movie-rating-button"><i class="fa-solid fa-star"></i></button>
-                        <button class="movie-rating-button"><i class="fa-solid fa-star"></i></button>
-                        <button class="movie-rating-button"><i class="fa-regular fa-star"></i></button>
+            <div class="article-rating-container article-section">
+
+                <form action="#" class="article-rating-form">
+                    <input type="hidden" name="articleId">
+                    <div class="article-rating-buttons">
+
                     </div>
                 </form>
-                <p><a href="#">Zaloguj się</a>, aby oddać głos</p>
+                <p><a href="#">Zaloguj się</a> aby oddać głos lub skomentować.</p>
+            </div>
+            <div class="comments">
+                <h1> Komentarze:</h1>
+                <div class="comment">
+                    <p class=commen-author href="#"> Jan Kapela: </p>
+                    <p class= "comment-content"> Uważam, że Ferguson ma rację w tym sporze. Makelele nie ma racji. </p>
+                    <div class="comment-icons">
+                        <i class="fa-solid fa-circle-plus"></i>
+                        <i class="comment-rating">134</i>
+                        <i class="fa-solid fa-circle-minus"></i>
+                    </div>
+                </div>
+                <div class="comment">
+                    <p class=commen-author href="#"> Daniel Kumor: </p>
+                    <p class= "comment-content">  Nie ma racji. </p>
+                    <div class="comment-icons">
+                        <i class="fa-solid fa-circle-plus"></i>
+                        <i class="comment-rating">-23</i>
+                        <i class="fa-solid fa-circle-minus"></i>
+                    </div>
+                </div>
+                <div class="comment">
+                    <p class=commen-author href="#"> Jan Kapela: </p>
+                    <p class= "comment-content"> Njalepszy i tak był Adam Małysz. </p>
+                    <div class="comment-icons">
+                        <i class="fa-solid fa-circle-plus"></i>
+                        <i class="comment-rating">55</i>
+                        <i class="fa-solid fa-circle-minus"></i>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
-
-    <footer class="footer">
-        <p>MovieClub 2021 <i class="fas fa-copyright"></i> JavaStart.pl</p>
-    </footer>
 </div>
 </body>
 </html>
