--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -40,6 +40,12 @@
         <li class="menu-item">
             <a href="#">Ranks</a>
         </li>
+        <li class="menu-item">
+            <a href="#" th:href="@{/admin}">Admin</a>
+        </li>
+        <li class="menu-item">
+            <a href="#">Zaloguj się</a>
+        </li>
     </ul>
     <header class="main-background">
         <h1 class="main-background-header">FPL News PL</h1>
