1 - 250523 - Add first page and css stylesheet.

--- a/src/main/resources/static/styles/main.css
+++ b/src/main/resources/static/styles/main.css
@@ -404,3 +404,7 @@ textarea {
     color: #ffc814;
     padding: 8px 0;
 }
+/*Biały kolor tekstu przy wyborze pliku*/
+.mc-form > input[type=file] {
+    color: white;
+}
