--- a/src/main/resources/templates/main-page-listing.html
+++ b/src/main/resources/templates/main-page-listing.html
@@ -32,7 +32,7 @@
             </li>
             <li class="article-list-item">
                 <a href="#">
-                    <img src="../static/img/poster-placeholder.png"
+                    <img src="../static/img/image-placeholder.png"
                          alt="tytuł filmu"
                          class="article-list-item-poster">
                 </a>
@@ -52,7 +52,8 @@
             </li>
             <li class="article-list-item">
                 <a href="#">
-                    <img src="../static/img/poster-placeholder.png"
+                    <img src="../static/img/image-placeholder.png"
+                         th:src="${article.image ne null} ? @{|/img/${article.image}|} : @{/img/image-placeholder.png}"
                          alt="tytuł filmu"
                          class="article-list-item-poster">
                 </a>
